Visual improvements for index webpage. Fixed mismatched title heights. Improved background look. Changed borders all to 1px to look better on mobile.

--- a/web/index.css
+++ b/web/index.css
@@ -5,7 +5,7 @@
 body {
     opacity: 0;
     transition: opacity 2.5s;
-    background: linear-gradient(rgb(11,25,18), rgb(21,25,28));
+    background: linear-gradient(120deg, rgb(31,55,78), rgb(101,15,18));
 }
 
 #unsupported {
@@ -22,7 +22,8 @@ p {
 
 #top {
     height: 10%;
-    background: linear-gradient(90deg, rgb(1,31,121), rgb(7,20,55));
+    background: linear-gradient(100deg, rgb(21,51,101), rgb(107,20,55));
+    border-bottom: 1px solid white;
 }
 
 #squarepicks {
@@ -96,7 +97,7 @@ p {
     color: rgb(150,120,200);
     background-color: rgb(20,10,30);
     box-shadow: -2px -3px 1px rgb(50,50,50);
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-align: center;
 }
 
@@ -130,7 +131,7 @@ img {
 }
 
 .armycell {
-    border: 3px solid rgb(80,10,100);
+    border: 1px solid rgb(80,10,100);
     border-radius: 5px;
     position: absolute;
 }
@@ -166,18 +167,13 @@ img {
 }
 
 #match, #squarematch {
-    border: 3px outset rgb(255,125,128);
+    border: 1px outset rgb(255,125,128);
     border-radius: 3px;
     color: rgb(255,240,245);
     background: linear-gradient(rgb(50,80,200), rgb(7,20,255));    
     box-shadow: 0px -4px 10px rgb(255,125,128);
     font-size: 2.4rem;
     text-align: center;
-}
-
-#army {
-    text-align: center;
-    padding: 10px;
 }
 
 .armydiv {
@@ -193,7 +189,7 @@ img {
 }
 
 #squarearmytitlemargin {
-    height: 20%;
+    height: 23%;
 }
 
 #armytitlemargin, #squarearmytitlemargin {
@@ -201,8 +197,8 @@ img {
 }
 
 #armytitle, #squarearmytitle {
-    color: rgb(255,195,175);
-    background-color: rgb(65,35,10);
+    color: rgb(255,215,175);
+    background-color: rgb(15,25,15);
     font-size: 1.5rem;
     text-align: center;
     font-weight: bold;
@@ -213,7 +209,7 @@ img {
 }
 
 #squarecollectiontitlemargin {
-    height: 20%;
+    height: 15%;
 }
 
 #collectiontitlemargin, #squarecollectiontitlemargin {
@@ -250,7 +246,7 @@ img {
 }
 
 .replaced {
-    border: 4px outset rgb(125,160,255);
+    border: 1px outset rgb(125,160,255);
     border-radius: 5px;
     box-shadow: 0px -4px 15px rgb(255,125,128);
 }
